[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[project]
name = "carbu-fuel"
version = "1.0.0"
description = "Home Assistant HACS integration for fuel prices from carbu.com (BE/FR/LU)"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
]

[tool.uv.build-backend]
module-name = "custom_components.carbu_fuel"
module-root = ""

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "D",      # pydocstyle
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "S",      # flake8-bandit
    "T20",    # flake8-print
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101"]  # No docstring requirements in tests, allow assert

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13",
    "ruff>=0.8",
    "mypy>=1.11",
]
